[tool.poetry]
name = "ccxt-latency"
version = "0.1.0"
description = ""
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rillrate = "^0.37.5"
ccxt = "^1.55.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
